fixed bug where graph containers would grow when overflowing

--- a/server-monitor/server-monitor.css
+++ b/server-monitor/server-monitor.css
@@ -125,10 +125,11 @@ body {
 }
 
 .detail_right {
-    flex-basis: 500px;
+    flex-basis: auto;
     flex-shrink: 2;
     flex-grow: 0;
     margin-left: 7px;
+    max-width: 500px;
 }
 
 /* hide the graph view on smaller screens */
